--- a/server/package.json
+++ b/server/package.json
@@ -19,14 +19,12 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.20"
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.4",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/lodash": "^4.14.149",
     "@types/node": "^13.11.0",
     "cross-env": "^6.0.3",
     "eslint": "^6.8.0",
@@ -35,7 +33,6 @@
     "nodemon": "^2.0.2",
     "rimraf": "^3.0.2",
     "ts-node": "^8.8.2",
-    "tsconfig-paths": "^3.9.0",
     "tslint": "^6.1.1",
     "typescript": "^3.9.7"
   }
